test/errors/builtin_types_error/zs/intfield65_error.zs
package intfield65_error;

struct WrongBitfield
{
    int<65> wrong;
};
